changed around the url paths for the grpc-gateway definitions so it looks a little more like an api, added in functions to retrieve *one* credential of each type
